sandbox/source-of-truths/policy-convention/constraint-template copy.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata: 
  name: k8senablesandbox
spec: 
  crd: 
    spec: 
      names: 
        kind: K8sEnableSandbox
      validation: 
        openAPIV3Schema: 
          properties:  
            className: 
              description: the runtime class name
              type: string
  targets: 
    - target: admission.k8s.gatekeeper.sh
      rego: | 
        package k8senablesandbox

        violation[{"msg": message}] {
          resource := input.review.object
          spec := resource.spec
          not spec.template          
          template := spec.template
          not template
          templatespec := template.spec
          not templatespec
          not templatespec.runtimeClassName
          validName := input.parameters.validName
          not match(templatespec.runtimeClassName)
          message := sprintf("The deployment needs to include runtimeClassName for %v to enable GKE sandbox %v, %v, %v. %v", [input.parameters.validName, resource, spec, templatespec, validName])
        }

        match(validName) {
          validName == "gvisor"
        }
