sandbox/source-of-truths/policy-convention/constraint.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEnableSandbox
metadata: 
  name: enable-gke-sandbox
  # annotations: 
  #   policycontroller: custom-constraint
spec: 
  enforcementAction: deny
  # match: 
  #   kinds: 
  #   - kinds: 
  #     - Deployment
  parameters:
    valid_name: "gvisor"
    # excludedNamespaces: 
    # - config-management-monitoring 
    # - config-management-system 
    # - default 
    # - gatekeeper-system 
    # - gke-connect 
    # - kube-node-lease
    # - kube-public
    # - kube-system
    # - resource-group-system
